v1.4/markdown/asct-b/asct-b-vh-lymph-node.md
# Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) table for Lymph Node v1.2

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://humanatlas.io/asctb-tables) aim to capture the nested *part_of* structure of anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts. The lymph node ASCT+B tables are derived from published literature, public datasets, and domain expertise from the authors. The table provides a reference for a canonical human mesenteric lymph node; however, it is anticipated that these tables will be amended to reflect lymph nodes draining other sites of the human body and changes arising from inflammation and other perturbations. The gross anatomy of the lymph node was highly influenced by the following text:[(Willard-Mack 2006)](https://doi.org/10.1080/01926230600867727). Cell types and gene biomarkers derived from sequencing studies were derived from the following studies:[(James et al. 2020)](https://doi.org/10.1038/s41590-020-0602-z), [(Xiang et al. 2020)](https://doi.org/10.3389/fcvm.2020.00052), and [(Szabo et al. 2019)](https://doi.org/10.1038/s41467-019-12464-3). Gene biomarkers for stromal cells were obtained from an orthogonal study in mice (DOI: 10.1016/j.immuni.2018.04.006). Several studies employing flow cytometry and immunohistochemistry aided in the identification of protein biomarkers. To support granular phenotyping, we list all reported biomarkers including negative and differentially expressed proteins. We anticipate further refinement from multimodal studies that pair sequencing and imaging studies from the same human sample. In total, this table reports 34 anatomical structures, 45 cell types, and 223 biomarkers.


| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Marda Jorgensen; Andrea J. Radtke; Natalie Rodriguez |
| **Creator ORCID(s):** | [0000-0002-7250-3569](https://orcid.org/0000-0002-7250-3569); [0000-0003-4379-8967](https://orcid.org/0000-0003-4379-8967); [0000-0001-6870-0300](https://orcid.org/0000-0001-6870-0300) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Clive Wasserfall; Elaine Jaffe; Stefania Pittaluga; Robert Seifert; Ellen M. Quardokus  |
| **Reviewer ORCID(s):** |[0000-0002-3522-8932](https://orcid.org/0000-0002-3522-8932); [0000-0003-4632-0301](https://orcid.org/0000-0003-4632-0301); [0000-0001-7688-1439](https://orcid.org/0000-0001-7688-1439); [0000-0002-4404-8116](https://orcid.org/0000-0002-4404-8116); [0000-0001-7655-4833](https://orcid.org/0000-0001-7655-4833) |
| **Creation Date:** | 2021-05-06 |
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD026671 |
| **HuBMAP ID:** | HBM437.JQVC.953 |
| **Data Table:** | [Lymph Node v1.2](https://hubmapconsortium.github.io/ccf-releases/v1.2/asct-b/ASCT-B_NIH_Lymph_Node.csv)  |
| **DOI:** | [https://doi.org/10.48539/HBM437.JQVC.953](https://doi.org/10.48539/HBM437.JQVC.953) |
| **How to Cite This Data Table:** | Marda Jorgensen; Andrea J. Radtke; Natalie Rodriguez, HuBMAP ASCT+B Tables. Lymph Node v1.2 [https://doi.org/10.48539/HBM437.JQVC.953](https://doi.org/10.48539/HBM437.JQVC.953) |
| **How to Cite ASCT+B Tables Overall:** | Quardokus, Ellen, Bruce W. Herr II, Lisel Record, Katy B&ouml;rner. 2022. [*HuBMAP ASCT+B Tables*](https://humanatlas.io/asctb-tables). Accessed on May 6, 2022. |
